--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -8,7 +8,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: $bg-secondary-color;
   background-color: #242424;
 
   font-synthesis: none;
@@ -26,4 +26,12 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+}
+
+a, a:visited, a:active, a:hover {
+  color: #DBD4C2;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #DBD4C2;
 }
